# mcp-text-util-demo

./: .gitignore  Dockerfile  README.md  apim-mcp-setup.ipynb  azure.yaml  copilot-studio-config.sh  get-connector-oauth-values.sh  pyproject.toml
apim/: apim-mcp-setup.ipynb  mcp-api.bicep  pyproject.toml
apim-deployment/: apim-mcp.bicep  apim-policy.xml  deploy-apim-mcp.sh  deploy-mcp-to-apim.ipynb  mcp-api.bicep  policy.xml
client/: .env.example  __main__.py  intent.py
infra/: abbreviations.json  main.bicep  main.json
infra/scripts/: postprovision.ps1  postprovision.sh
server/: __main__.py  agent.py  skills.py
