[project]
name = "mcp-text-utilities"
version = "0.1.0"
description = "MCP Text Utilities Server — demo MCP server for Azure deployment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "azure-identity>=1.19.0",
    "azure-monitor-opentelemetry>=1.6.0",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
